--- a/vue01/07.vue中样式-class.html
+++ b/vue01/07.vue中样式-class.html
@@ -51,7 +51,7 @@
       el: '#app',
       data: {
         flag: true,
-        classObj: { red: true, thin: true, italic: false, active: false }
+        classObj: { red: true, thin: true, italic: false, active: true }
       },
       methods: {}
     });
